--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         {% include header.html %}
       </header>
       <section class="secondary-content">
-        <div class="skills">
+        <!-- <div class="skills">
           <span class="devicons devicons-javascript_badge"></span>
           <span class="devicons devicons-ruby"></span>
           <span class="devicons devicons-ember"></span>
@@ -20,11 +20,15 @@
           <span class="devicons devicons-sass"></span>
           <span class="devicons devicons-mongodb"></span>
           <span class="devicons devicons-html5"></span>
-        </div>
+        </div> -->
         <div class="about">
           <p>
             I'm a Lead Instructor at <a href="http://galvanize.com">Galvanize</a>, <a href="https://github.com/ericam/susy">Susy contributor</a>,
             mentor at <a href="http://www.meetup.com/Denver-DevCamp-us/">DevCampus</a>, co-organizer of <a href="http://www.meetup.com/Sass-Hack-Denver/">DenverSass</a>, queer atheist & mostly harmless.
+          </p>
+          <p>
+            <strong>Email</strong>: aaron@hellometa.com <br>
+            <strong>Twitter</strong>: <a href="http://www.twitter.com/aaronagray">@aaronagray</a>
           </p>
         </div>
         <form action="https://tinyletter.com/aarongray" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/allygray', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
